// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelMessage renders component 1`] = `
<Memo(WithStyles(BasicMessage))
  actionsOpen={false}
  message={
    Immutable.DisplayableMessage {
      "id": 1,
      "type": 1,
      "sender": Immutable.ExchangeParticipant {
        "replyTo": "",
        "username": "Unnamed",
      },
      "receiver": Immutable.ExchangeParticipant {
        "replyTo": "",
        "username": "Unnamed",
      },
      "createdAt": 1551960228,
      "message": "This is some message 1",
      "spent": "0",
      "fromYou": false,
      "status": "broadcasted",
      "error": null,
    }
  }
  setActionsOpen={[Function]}
>
  <WithStyles(ForwardRef(Typography))
    className="message-mock"
    variant="body2"
  >
    This is some message 1
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Collapse))
    in={false}
    timeout="auto"
  >
    <Memo(ChannelMessageActions)
      fromYou={false}
      onReply={[Function]}
      onResend={[Function]}
      status="broadcasted"
    />
  </WithStyles(ForwardRef(Collapse))>
</Memo(WithStyles(BasicMessage))>
`;

exports[`ChannelMessage renders component when message is sent by owner 1`] = `
<Memo(WithStyles(BasicMessage))
  actionsOpen={false}
  message={
    Immutable.DisplayableMessage {
      "id": 1,
      "type": 1,
      "sender": Immutable.ExchangeParticipant {
        "replyTo": "",
        "username": "Unnamed",
      },
      "receiver": Immutable.ExchangeParticipant {
        "replyTo": "",
        "username": "Unnamed",
      },
      "createdAt": 1551960228,
      "message": "This is some message 1",
      "spent": "0",
      "fromYou": true,
      "status": "broadcasted",
      "error": null,
    }
  }
  setActionsOpen={[Function]}
>
  <WithStyles(ForwardRef(Typography))
    className="message-mock"
    variant="body2"
  >
    This is some message 1
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Collapse))
    in={false}
    timeout="auto"
  >
    <Memo(ChannelMessageActions)
      fromYou={true}
      onReply={[Function]}
      onResend={[Function]}
      status="broadcasted"
    />
  </WithStyles(ForwardRef(Collapse))>
</Memo(WithStyles(BasicMessage))>
`;
